写了一个有点不合法的调用回调函数的方法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "geometry": "cpp",
         "ostream": "cpp",
         "vector": "cpp",
-        "dense": "cpp"
+        "dense": "cpp",
+        "functional": "cpp"
     }
 }
