多线程能编译通过版本,但运行有问题

--- a/ros_ws/src/fusion_of_camera_and_lidar/CMakeLists.txt
+++ b/ros_ws/src/fusion_of_camera_and_lidar/CMakeLists.txt
@@ -143,6 +143,7 @@ add_library(my_lidar
   src/my_lidar.cpp
   # include/${PROJECT_NAME}/my_lidar.h
 )
+target_link_libraries(my_lidar ${PCL_LIBRARIES})
 add_library(my_camera
   src/my_camera.cpp
   # include/${PROJECT_NAME}/my_camera.h
@@ -156,7 +157,7 @@ add_library(fusion
   # include/${PROJECT_NAME}/my_lidar.h
   # include/${PROJECT_NAME}/my_camera.h
 )
-target_link_libraries(fusion my_config)
+target_link_libraries(fusion my_config my_lidar my_camera)
 
 
 # link_directories(include/${PROJECT_NAME})
